# fitGPT

./: .gitignore  pyproject.toml
src/: main.py
src/strategy/: activity_tracker.py  assistant.py  nutrition_tracker.py
